<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <EditText
        android:id="@+id/register_email"
        android:layout_width="350dp"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/imput_text_email"
        android:inputType="textEmailAddress"
        android:paddingStart="22dp"
        android:paddingEnd="22dp"
        app:layout_constraintBottom_toTopOf="@+id/register_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <EditText
        android:id="@+id/register_name"
        android:layout_width="350dp"
        android:layout_height="56dp"
        android:layout_marginTop="647dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/imput_text_name"
        android:inputType="textPersonName"
        android:paddingStart="22dp"
        android:paddingEnd="22dp"
        app:layout_constraintBottom_toTopOf="@+id/register_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="350dp"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="192dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/imput_password"
        android:paddingStart="22dp"
        android:paddingEnd="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_name" />

    <EditText
        android:id="@+id/register_password_again"
        android:layout_width="350dp"
        android:layout_height="56dp"
        android:layout_marginBottom="128dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/register_imput_password"
        android:paddingStart="22dp"
        android:paddingEnd="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="496dp"
        android:layout_height="841dp"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/loginbackground" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="147dp"
        android:layout_height="147dp"
        android:layout_marginBottom="604dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/whitelogo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="344dp"
        android:text="@string/sloogan"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="194dp"
        android:layout_height="192dp"
        android:layout_marginTop="332dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        android:src="@drawable/avatarrr" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="232dp"
        android:layout_height="51dp"
        android:layout_marginTop="176dp"
        android:gravity="center"
        android:text="Hesap Oluştur"
        android:textColor="@color/black"
        android:textSize="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView8" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="350dp"
        android:layout_height="56dp"
        android:background="@drawable/custom_input"
        android:text="@string/register_button_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password_again"
        app:layout_constraintVertical_bias="0.238" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="73dp"
        android:text="Zaten hesabım var"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.292"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/register_button" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="73dp"
        android:text="Giriş Yap"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/register_button" />

</androidx.constraintlayout.widget.ConstraintLayout>